<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="48dp">
        <TextView
            android:id="@+id/texto_conectar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:text="@string/conectar"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <EditText
            android:id="@+id/input_usuario"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:hint="@string/Correo"/>
        <EditText
            android:id="@+id/input_contraseña"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Contra"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/boton_iniciar_sesion"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:textAllCaps="false"
            android:text="@string/inse"/>
        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="finalizarAvtividad"
            android:layout_weight="0.1"
            android:textAllCaps="false"
            android:text="@string/Salir2"/>
        <TextView
            android:id="@+id/texto_olvidaste_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/contrasena"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0E8AEE"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>